added zizi show

--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -48,18 +50,20 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-40831263-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
 </head>
@@ -68,7 +72,7 @@
 
 
 	<nav id="navMenu"></nav>
-<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -78,23 +82,41 @@
 
 			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-			<!-- <div class="desktop-3 tablet-12 nested columns"> -->
+				<!-- <div class="desktop-3 tablet-12 nested columns"> -->
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi - Queering the Dataset</h3>
 							<p class="project-desc">2019, multi-channel digital video, 135 minute loop
-</p>
+							</p>
 
-<p>
-	‘Zizi - Queering the Dataset’ aims to tackle the lack of representation and diversity in the training datasets often used by facial recognition systems. The video was made by disrupting these systems<small><sub>1</sub></small> and re-training them with the addition of drag and gender fluid faces found online. This causes the weights inside the neural network to shift away from the normative identities it was originally trained on and into a space of queerness. ‘Zizi - Queering The Dataset’ lets us peek inside the machine learning system and visualise what the neural network has (and hasn’t) learnt. The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. 
-</p>
-<p>
-	<i>The Zizi Project is a collection of works by Jake Elwes exploring the intersection of Artificial Intelligence (A.I.) and drag performance. Drag challenges gender and explores otherness, while A.I. is often mystified as a tool and contains social bias. Zizi combines them through a deep fake, synthesised drag identity created using machine learning. The project explores what AI can teach us about drag, and what drag can teach us about A.I.</i>
-</p>
+							<p>
+								‘Zizi - Queering the Dataset’ aims to tackle the lack of representation and diversity in
+								the training datasets often used by facial recognition systems. The video was made by
+								disrupting these systems<small>*</small> and re-training them with the
+								addition of drag and gender fluid faces found online. This causes the weights inside the
+								neural network to shift away from the normative identities it was originally trained on
+								and into a space of queerness. ‘Zizi - Queering The Dataset’ lets us peek inside the
+								machine learning system and visualise what the neural network has (and hasn’t) learnt.
+								The work is a celebration of difference and ambiguity, which invites us to reflect on
+								bias in our data driven society.
+							</p>
+							<p><small><small>
+										*A Style-Based Generator Architecture for Generative Adversarial Networks
+										(2019)</p></small></small>
+							<p>
+							<p class="border-top">
+								<i>The Zizi Project (2019 - ongoing) is a collection of works by Jake Elwes exploring
+									the intersection of Artificial Intelligence (A.I.) and drag performance. Drag
+									challenges gender and explores otherness, while A.I. is often mystified as a concept
+									and tool, and is complicit in reproducing social bias. Zizi combines these themes
+									through a deepfake, synthesised drag identity created using machine learning. The
+									project explores what AI can teach us about drag, and what drag can teach us about
+									A.I.</i>
+							</p><br>
 
 							<!-- <p>
 								Zizi is a procession of faces of drag artists in constant transition generated from data using machine learning<small><sub>1</sub></small>. Drag is a queer performance form that celebrates and challenges gender and otherness. It's loud, bold and beautiful. Zizi’s gender, identity, race, whether they are real or artificial, is all uncertain.
@@ -105,17 +127,25 @@
 </p> -->
 
 
-<p><small><small>
-1) A Style-Based Generator Architecture for Generative Adversarial Networks (2019)</p></small>
-<p>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read full curatorial text by Drew Hemment, Edinburgh Futures Institute.<br></a>
-</p>
-	<p>
-								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions trained on drag profiles.
+							<small>
+								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read
+									curatorial text by Drew Hemment, Edinburgh Futures Institute.<br></a>
+								</p>
+								<p>
+									Instagram <a id="show" target="_blank"
+										href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning
+									generated captions trained on drag profiles.
 
-								 <br>Zizi was originally commissioned as a seven channel video installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace, The University of Edinburgh. <br> Presented as site specific video installation with between 3 and 10 projected video channels.
+									<br>Zizi was originally commissioned as a seven channel video installation by <a
+										id="show" target="_blank"
+										href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential
+										AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh
+										Futures Institute</a> and Inspace, The University of Edinburgh. <br> Presented
+									as
+									site specific video installation with between 3 and 10 projected video channels.
 
-							 </small></p>
+							</small>
+							</p>
 
 						</div><!-- // .box-info -->
 
@@ -132,28 +162,36 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
-			<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
-			<script>
-				function resizeDivs() {
-					$('#vid').css("height", $('#vid').width());
-					$('#vid2').css("height", $('#vid2').width()/1.7777);
+				<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
+				<script>
+					function resizeDivs() {
+						$('#vid').css("height", $('#vid').width());
+						$('#vid2').css("height", $('#vid2').width() / 1.7777);
 
-				}
-				$(resizeDivs);
-				$(window).resize(resizeDivs);
-			</script>
-			<iframe id="vid" src="https://player.vimeo.com/video/388245510?loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
-			<br><br>
+					}
+					$(resizeDivs);
+					$(window).resize(resizeDivs);
+				</script>
+				<iframe id="vid" src="https://player.vimeo.com/video/388245510?loop=1&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+				<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
+				<br><br>
 
-
-			<img src="images/project-zizi19/Screen1.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
-			<img src="images/project-zizi19/Screen2.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
-			<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
-			<br>
-			<img src="images/project-zizi19/Edinburgh.jpg" style="width:60%; " alt="CUSP 2019 - Jake Elwes digital artist" />
-			<img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; " alt="CUSP 2019 - Jake Elwes digital artist" />
-			<rb></rb><small>Edinburgh 2019, Experiential AI at Edinburgh Futures Institute and Inspace during Edinburgh Fringe Festival</small>
+				<img src="images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>Zizi: Queering the Dataset 2019, 3-channels</small>
+				<br>
+				<img src="images/project-zizi19/Screen1.jpg" style="width:49%; "
+					alt="CUSP 2019 - Jake Elwes digital artist" />
+				<img src="images/project-zizi19/Screen2.jpg" style="width:49%; "
+					alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
+				<br>
+				<img src="images/project-zizi19/Edinburgh.jpg" style="width:60%; "
+					alt="CUSP 2019 - Jake Elwes digital artist" />
+				<img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; "
+					alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019</small>
 
 
 			</div><!-- // .desktop-9 -->
@@ -166,9 +204,9 @@
 
 
 
-		<nav id="footer"></nav>
+	<nav id="footer"></nav>
 
-		<script src="header.js"></script>
+	<script src="header.js"></script>
 	<!-- JS
 	================================================== -->
 	<!--
@@ -185,7 +223,8 @@
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
