--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 
@@ -36,7 +38,8 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Jake Elwes</title>
-	<meta name="description" content="Artworks by Jake Elwes, based in London. Recent works have looked at AI & machine learning, investigating the technology, philosophy and ethics behind it.">
+	<meta name="description"
+		content="Artworks by Jake Elwes, based in London. Recent works have looked at AI & machine learning, investigating the technology, philosophy and ethics behind it.">
 	<meta name="author" content="Jake Elwes">
 
 	<!-- Mobile Specific Metas
@@ -69,13 +72,15 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-	  ga('create', 'UA-40831263-1', 'auto');
-	  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
 	</script>
 
@@ -89,31 +94,39 @@
 <body>
 	<!-- Header - Half Logo
 	================================================== -->
-		<nav id="navMenu"></nav>
-		<script src="header.js"></script>
+	<nav id="navMenu"></nav>
+	<script src="header.js"></script>
 
-		<section id="header2">
+	<section id="header2">
 
 		<div class="container">
 
-			<div class="desktop-12 columns"><div class="border-top" style="padding-top: 0px;"></div></div>
+			<div class="desktop-12 columns">
+				<div class="border-top" style="padding-top: 0px;"></div>
+			</div>
 
 			<div class="desktop-2 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="index.html" class="btn-social btn-outline"><p>WORKS</p></a>
+				<a href="index.html" class="btn-social btn-outline">
+					<p>WORKS</p>
+				</a>
 			</div><!-- // .desktop-3 -->
 
 			<div class="desktop-2 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="news.html" class="btn-social btn-outline"><p>NEWS &amp; TALKS</p></a>
+				<a href="news.html" class="btn-social btn-outline">
+					<p>NEWS &amp; TALKS</p>
+				</a>
 			</div><!-- // .desktop-3 -->
 
 
 			<div class="desktop-4 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="about.html" class="btn-social btn-outline"><p>ABOUT &amp; SHOWS</p></a>
+				<a href="about.html" class="btn-social btn-outline">
+					<p>ABOUT &amp; SHOWS</p>
+				</a>
 
-					<!-- <a href="about.html" class="btn-social btn-outline"><p>ABOUT<i class="fa fa-fw fa-eye" style="padding-left: 10px;font-size: 17px;"></i></p></a> -->
+				<!-- <a href="about.html" class="btn-social btn-outline"><p>ABOUT<i class="fa fa-fw fa-eye" style="padding-left: 10px;font-size: 17px;"></i></p></a> -->
 			</div><!-- // .desktop-3 -->
 
 
@@ -122,11 +135,17 @@
 			<div class="desktop-4 tablet-6 columns">
 
 				<ul id="social">
-					<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
-					<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
-					<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
-					<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
-					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+					<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i
+								class="fa fa-fw fa-instagram"></i></a></li>
+					<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i
+								class="fa fa-fw fa-twitter"></i></a></li>
+					<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i
+								class="fa fa-fw fa-vimeo"></i></a></li>
+					<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b"
+							class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
+							onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
+							class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 					<!-- <li><a href="https://lab.jakeelwes.com" class="btn-social btn-outline">STUDIO</i></a></li> -->
 				</ul><!-- // #social -->
 
@@ -152,201 +171,203 @@
 	<section id="works" class="">
 		<div class="container">
 
-			<!-- <a href="project-cusp.html" class="permalink"> -->
+			<a href="project-zizi-show.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
+						<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
 
-						<h3 style="color: #999;">The Zizi Show </h3>
-						<span class="category" style="color: #999;">web, 2020 (<a id="show" target="_blank" href="https://zizi.ai">zizi.ai</a> - coming soon as part of <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>)</span>
-					</div>
+						<h3>The Zizi Show </h3>
+			</a>
+
+			<span style="display:block" class="category">web, 2021 - <a style="white-space:nowrap" id="show"
+					target="_blank" href="https://zizi.ai">visit zizi.ai</a></span>
+		</div>
+		</div>
+
+		<a href="project-zizi-and-me.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>Zizi & Me</h3>
+					<span class="category">performance collaboration, 2020 (ongoing)</span>
 				</div>
-			<!-- </a> -->
+			</div>
+		</a>
 
-			<a href="project-zizi-and-me.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-zizi-2019.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Zizi & Me</h3>
-						<span class="category">video & performance, 2020 (in development)</span>
-					</div>
+					<h3>Zizi - Queering the Dataset</h3>
+					<span class="category">video, 2019</span>
 				</div>
-			</a>
+			</div>
+		</a>
 
-			<a href="project-zizi-2019.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
+		<div class="clear hide-under-tablet"></div>
 
-						<h3>Zizi - Queering the Dataset</h3>
-						<span class="category">video, 2019</span>
-					</div>
+		<a href="project-cusp.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>CUSP</h3>
+					<span class="category">video, 2019</span>
 				</div>
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-			<a href="project-cusp.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>CUSP</h3>
-						<span class="category">video, 2019</span>
-					</div>
-				</div>
-			</a>
+			</div>
+		</a>
 
 
-			<a href="project-latentSpace.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-latentSpace.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Latent Space</h3>
-						<span class="category">video, 2017</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>Latent Space</h3>
+					<span class="category">video, 2017</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
 
-			<a href="project-closedLoop.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-closedLoop.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Closed Loop</h3>
-						<span class="category">installation, 2017</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>Closed Loop</h3>
+					<span class="category">installation, 2017</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
-			<div class="clear hide-under-tablet"></div>
+		<div class="clear hide-under-tablet"></div>
 
 
-			<a href="project-DaDaTa.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-DaDaTa.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>dada da ta</h3>
-						<span class="category">video, 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>dada da ta</h3>
+					<span class="category">video, 2016</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
 
 
 
-			<a href="project-digitalWhisper.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-digitalWhisper.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Digital Whispers</h3>
-						<span class="category">installation, 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-
-			<a href="project-AutoEncodedBuddha.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Auto-Encoded Buddha</h3>
-						<span class="category">installation, 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-
-			<a href="project-MLPorn.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Machine Learning Porn</h3>
-						<span class="category">video, 2016</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>Digital Whispers</h3>
+					<span class="category">installation, 2016</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
 
-			<a href="project-digitalTouch.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-AutoEncodedBuddha.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Digital Caress</h3>
-						<span class="category">print, 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>Auto-Encoded Buddha</h3>
+					<span class="category">installation, 2016</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
-
-			<a href="project-circuit.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Solid State</h3>
-						<span class="category">print, 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<div class="clear hide-under-tablet"></div>
+		<div class="clear hide-under-tablet"></div>
 
 
-			<a href="project-iPhoneTouch.html" class="permalink">
-		<div class="desktop-4 tablet-6 columns">
-			<div class="item">
-				<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-MLPorn.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
 
-				<h3>Behind The Screen</h3>
-				<span class="category">app, 2015</span>
-			</div><!-- // .item -->
-		</div><!-- // .desktop-4 -->
-	</a>
+					<h3>Machine Learning Porn</h3>
+					<span class="category">video, 2016</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
 
-			<a href="project-pornCircles.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
+		<a href="project-digitalTouch.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Porn Saturation</h3>
-						<span class="category">print, 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-
-			<a href="project-lineForWalk.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Taking a Phone for a Walk</h3>
-						<span class="category">print & app, 2015</span>
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
+					<h3>Digital Caress</h3>
+					<span class="category">print, 2015</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
-			<div class="clear hide-under-tablet"></div>
+		<a href="project-circuit.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
 
-			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
+					<h3>Solid State</h3>
+					<span class="category">print, 2015</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
+
+		<div class="clear hide-under-tablet"></div>
+
+
+		<a href="project-iPhoneTouch.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>Behind The Screen</h3>
+					<span class="category">app, 2015</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
+
+
+
+		<a href="project-pornCircles.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>Porn Saturation</h3>
+					<span class="category">print, 2015</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
+
+
+		<a href="project-lineForWalk.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>Taking a Phone for a Walk</h3>
+					<span class="category">print & app, 2015</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
+
+
+		<div class="clear hide-under-tablet"></div>
+
+		<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
 		</div><!-- // .container -->
 	</section><!-- // section#works -->
@@ -385,7 +406,8 @@
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
