added zizi show acts

--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -123,35 +123,72 @@
 
 
 							<p class="border-top">
-								<p>
-									<b>Credits</b>
-								</p>
-							<ul>
+							<p>
+								<b>Credits</b>
+							</p>
+							<ul style="line-height: 1.6rem;">
 								<li>
-									<b><a id="show" target="_blank" href="https://www.jakeelwes.com/">Jake Elwes</b></a> - Artist, Coder
+									<b><a id="show" target="_blank" href="https://www.jakeelwes.com/">Jake Elwes</b></a>
+									- Artist, Coder
 									&amp; Producer
 								</li>
 								<li>
-									<b><a id="show" target="_blank" href="https://www.instagram.com/methedragqueen">Me</b></a> -
+									<b><a id="show" target="_blank"
+											href="https://www.instagram.com/methedragqueen">Me</b></a> -
 									Performance &amp; Casting Director
 								</li>
 								<li>
-									<b><a id="show" target="_blank" href="https://alxhill.com/">Alexander Hill</b></a> - Web &amp;
+									<b><a id="show" target="_blank" href="https://alxhill.com/">Alexander Hill</b></a> -
+									Web &amp;
 									Development
 								</li>
 								<li>
-									<b><a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</b></a> - Camera &amp;
+									<b><a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</b></a>
+									- Camera &amp;
 									Lighting
 								</li>
 								<li>
-									<b><a id="show" target="_blank" href="https://soundcloud.com/breakaleeds">Charlie Baker</b></a> -
+									<b><a id="show" target="_blank" href="https://soundcloud.com/breakaleeds">Charlie
+											Baker</b></a> -
 									Sound Mixing
 								</li>
 							</ul>
+							<p><b>Cast</b></p>
+							<small>
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/bolly_illusion">Bolly-Illusion <a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/tastemycaramelle">Cara Melle<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/PrinxChiyo">Chiyo<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/dakota.schiffer">Dakota Schiffer<a> <br>
+									<a id="show" target="_blank" href="https://www.instagram.com/lillysnatch">Lilly
+											SnatchDragon<a> |
+									<a id="show" target="_blank" href="https://www.instagram.com/Lukeslyka">Luke
+											Slyka<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/mahatmakhandi">Mahatma Khandi <a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/markanthony.dragking">Mark Anthony<a> <br>
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/methedragqueen">Me<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/Oedipussi.rex">Oedipussi Rex<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/mxrubywednesday">Ruby Wednesday<a> |
+									<a id="show" target="_blank"
+											href="https://www.instagram.com/officialsistersister">Sister Sister<a> |
+									<a id="show" target="_blank" href="https://www.instagram.com/tete_bang">Tete
+											Bang<a>
+							</small>
+
 							<small>
 								<p><i>In Collaboration with
-										<b><a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh Futures Institute</b></a></i></p>
-								<ul>
+										<b><a id="show" target="_blank"
+												href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
+												Futures Institute</b></a></i></p>
+								<ul style="line-height: 1.2rem;">
 									<li>
 										<b>Drew Hemment</b> - Project Director &amp; Curator
 									</li>
@@ -162,10 +199,13 @@
 										<b>Sarah Bennett</b> - Researcher
 									</li>
 								</ul>
-								<p>The Zizi Show is part of <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>
-									by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh Futures Institute</a> at
-									<a id="show" target="_blank" href="https://www.eif.co.uk/whats-on/2020/the-new-real">Edinburgh
-									International Festival.</a></p>
+								<p>The Zizi Show is part of <a id="show" target="_blank" href="https://newreal.cc/">The
+										New Real</a>
+									by <a id="show" target="_blank"
+										href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
+										Futures Institute</a> at Edinburgh
+										International Festival.
+								</p>
 							</small>
 							</p>
 
