--- a/footer.html
+++ b/footer.html
@@ -16,15 +16,9 @@
       <li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
       <li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
       <li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
-      <li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+      <li><a target="_blank" href="https://www.youtube.com/user/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
       <li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
     </ul><!-- // #social -->
-
-    <!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-    <a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-    <a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
-    <a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
 
   </div><!-- // .desktop-9 -->
   <!-- <div class="desktop-4 columns"><p></p></div> -->
@@ -41,7 +35,7 @@
   <div class="container">
     <div class="desktop-3 columns">
 
-      <p>Copyright &copy; <a class="italic">Jake Elwes 2020<p id="copyright"><p>
+      <p>Copyright &copy; <a class="italic">Jake Elwes 2016<p id="copyright"><p>
     </a></p>
     </div><!-- // .desktop-3 -->
   </div><!-- // .container -->
