--- a/lab.html
+++ b/lab.html
@@ -98,15 +98,9 @@
 					<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook-official"></i></a></li>
 					<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
 					<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+					<li><a href="https://www.youtube.com/user/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
 					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 				</ul><!-- // #social -->
-
-				<!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-				<a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-				<a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
-				<a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-				<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
 
 			</div><!-- // .desktop-9 -->
 			<!-- <div class="desktop-4 columns"><p></p></div> -->
