--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -90,7 +90,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">The Zizi Show</h3>
-							<p class="project-desc">2021, web
+							<p class="project-desc">2021, interactive performance
 							</p>
 							<p><a id="show" target="_blank" href="https://zizi.ai/">ENTER | ZIZI.AI</a></p>
 							<p>Drag Queens, Drag Kings, Drag Things and Artificial Intelligence… <br>
@@ -106,7 +106,7 @@
 								closed during COVID-19. During each act audiences are invited to interact with the
 								website and play with which deepfake bodies perform which songs. At times this breaks
 								down when the A.I. tries to conceive impossible positions or combines multiple different
-								queer identities; it can even reveal the skeleton tracking the deep fake is built on.
+								queer identities; it can even reveal the skeleton tracking the deepfake is built on.
 								The Zizi Show constructs and then deconstructs a virtual cabaret that pushes the limits
 								of what can be imagined on a digital stage.
 							</p>
@@ -151,6 +151,10 @@
 									<b><a id="show" target="_blank" href="https://soundcloud.com/breakaleeds">Charlie
 											Baker</b></a> -
 									Sound Mixing
+								</li>
+								<li>
+									<b><a id="show" target="_blank" href="https://theappletreelondon.com/#events">The Apple Tree</b></a> -
+									Filming Location (LGBTQ+ Cabaret Venue)
 								</li>
 							</ul>
 							<p><b>Cast</b></p>
@@ -225,7 +229,7 @@
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
-						src="images/project-zizi-show/full-browser-alt.jpg" style="width:100%; "
+						src="images/project-zizi-show/full.jpg" style="width:100%; "
 						alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
 
 
