--- a/news.html
+++ b/news.html
@@ -167,9 +167,7 @@
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
 						<br>
-						I was invited to be part of a Three-part YouTube Series on Art, Technology and Gender which have
-						together, ART+TECHNOLOGY is brought to you by Hyundai Motor Company and produced in partnership
-						with Bloomberg Media Group.
+						I was invited to be part of a series on Art, Technology and Gender. 3 x 3 minute films form episode 10 of ART+TECHNOLOGY brought to you by Hyundai Motor Company and produced in partnership with Bloomberg Media Group.
 						<br>
 						<br>
 
