--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -94,7 +94,7 @@
 							</p>
 							<p><a id="show" target="_blank" href="https://zizi.ai/">ENTER | ZIZI.AI</a></p>
 							<p>Drag Queens, Drag Kings, Drag Things and Artificial Intelligence… <br>
-								The Zizi Show (2021) is a deepfake drag cabaret, a virtual online stage hosting a
+								The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a
 								groundbreaking new show with a twist. It features acts that have been constructed using
 								deepfake technology, learning how to do drag by watching a diverse group of human
 								performers. The Zizi Show dissects one of the dominant myths about AI, the notion that
@@ -135,7 +135,7 @@
 								<li>
 									<b><a id="show" target="_blank"
 											href="https://www.instagram.com/methedragqueen">Me</b></a> -
-									Performance &amp; Casting Director
+									Director of Drag
 								</li>
 								<li>
 									<b><a id="show" target="_blank" href="https://alxhill.com/">Alexander Hill</b></a> -
@@ -230,38 +230,38 @@
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
 						src="images/project-zizi-show/full.jpg" style="width:100%; "
-						alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
+						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
-						style="width:49%;margin-top:0px" alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
+						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/panel.jpg"
-						style="width:49%;margin-top:0px" alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
+						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
 						src="images/project-zizi-show/full-browser.jpg" style="width:49%;margin-top:0px"
-						alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
+						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
 						src="images/project-zizi-show/close-browser.jpg" style="width:49%;margin-top:0px"
-						alt="The Zizi Show 2021 - Jake Elwes digital artist" /></a>
+						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<br><small>The Zizi Show (2021), stills from zizi.ai</small>
+				<br><small>The Zizi Show (2020), stills from zizi.ai</small>
 
 
 				<img class="border-top" src="images/project-zizi-show/amalgams.jpg" style="width:100%; "
-					alt="The Zizi Show 2021 - Jake Elwes digital artist" />
-				<br><small>The Zizi Show (2021), montage of deepfake drag artists</small>
+					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
+				<br><small>The Zizi Show (2020), montage of deepfake drag artists</small>
 
 				<img src="images/project-zizi-show/banner.jpg" style="width:100%; "
-					alt="The Zizi Show 2021 - Jake Elwes digital artist" />
-				<br><small>The Zizi Show (2021), concept art</small>
+					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
+				<br><small>The Zizi Show (2020), concept art</small>
 
 				<img src="images/project-zizi-show/lilly-snatchdragon-training.jpg" style="width:100%; "
-					alt="The Zizi Show 2021 - Jake Elwes digital artist" />
-				<br><small>The Zizi Show (2021), montage of a deepfake training on drag queen Lilly Snatchdragon</small>
+					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
+				<br><small>The Zizi Show (2020), montage of a deepfake training on drag queen Lilly Snatchdragon</small>
 				<br><br>
 
 
