added zizi show acts

--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -125,7 +125,7 @@
 							<p class="border-top">
 							<p>
 								<b>Credits</b>
-							</p>
+							</p><small>
 							<ul style="line-height: 1.6rem;">
 								<li>
 									<b><a id="show" target="_blank" href="https://www.jakeelwes.com/">Jake Elwes</b></a>
@@ -153,45 +153,53 @@
 									Sound Mixing
 								</li>
 								<li>
-									<b><a id="show" target="_blank" href="https://theappletreelondon.com/#events">The Apple Tree</b></a> -
+									<b><a id="show" target="_blank" href="https://theappletreelondon.com/#events">The
+											Apple Tree</b></a> -
 									Filming Location (LGBTQ+ Cabaret Venue)
 								</li>
-							</ul>
+							</ul></small>
 							<p><b>Cast</b></p>
 							<small>
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/bolly_illusion">Bolly-Illusion <a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/tastemycaramelle">Cara Melle<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/PrinxChiyo">Chiyo<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/dakota.schiffer">Dakota Schiffer<a> <br>
-									<a id="show" target="_blank" href="https://www.instagram.com/lillysnatch">Lilly
-											SnatchDragon<a> |
-									<a id="show" target="_blank" href="https://www.instagram.com/Lukeslyka">Luke
-											Slyka<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/mahatmakhandi">Mahatma Khandi <a> |
-									<a id="show" target="_blank"
+								<a id="show" target="_blank"
+									href="https://www.instagram.com/bolly_illusion">Bolly-Illusion </a> |
+								<a id="show" target="_blank" href="https://www.instagram.com/tastemycaramelle">Cara
+									Melle</a> |
+								<a id="show" target="_blank" href="https://www.instagram.com/PrinxChiyo">Chiyo</a> |
+								<a id="show" target="_blank" href="https://www.instagram.com/dakota.schiffer">Dakota
+									Schiffer<a> <br>
+										<a id="show" target="_blank" href="https://www.instagram.com/lillysnatch">Lilly
+											SnatchDragon</a> |
+										<a id="show" target="_blank" href="https://www.instagram.com/Lukeslyka">Luke
+											Slyka</a> |
+										<a id="show" target="_blank"
+											href="https://www.instagram.com/mahatmakhandi">Mahatma Khandi </a> |
+										<a id="show" target="_blank"
 											href="https://www.instagram.com/markanthony.dragking">Mark Anthony<a> <br>
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/methedragqueen">Me<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/Oedipussi.rex">Oedipussi Rex<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/mxrubywednesday">Ruby Wednesday<a> |
-									<a id="show" target="_blank"
-											href="https://www.instagram.com/officialsistersister">Sister Sister<a> |
-									<a id="show" target="_blank" href="https://www.instagram.com/tete_bang">Tete
-											Bang<a>
+												<a id="show" target="_blank"
+													href="https://www.instagram.com/methedragqueen">Me</a> |
+												<a id="show" target="_blank"
+													href="https://www.instagram.com/Oedipussi.rex">Oedipussi Rex</a> |
+												<a id="show" target="_blank"
+													href="https://www.instagram.com/mxrubywednesday">Ruby Wednesday</a>
+												|
+												<a id="show" target="_blank"
+													href="https://www.instagram.com/officialsistersister">Sister
+													Sister</a> |
+												<a id="show" target="_blank"
+													href="https://www.instagram.com/tete_bang">Tete
+													Bang</a>
 							</small>
 
 							<small>
-								<p><i>In Collaboration with
-										<b><a id="show" target="_blank"
-												href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
-												Futures Institute</b></a></i></p>
+								<p><i>
+										Part of <a id="show" target="_blank"
+											href="https://newreal.cc/">The
+											New Real</a>
+										by <a id="show" target="_blank"
+											href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
+											Futures Institute</a> at Edinburgh
+										International Festival.
+									</i></p>
 								<ul style="line-height: 1.2rem;">
 									<li>
 										<b>Drew Hemment</b> - Project Director &amp; Curator
@@ -203,13 +211,7 @@
 										<b>Sarah Bennett</b> - Researcher
 									</li>
 								</ul>
-								<p>The Zizi Show is part of <a id="show" target="_blank" href="https://newreal.cc/">The
-										New Real</a>
-									by <a id="show" target="_blank"
-										href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
-										Futures Institute</a> at Edinburgh
-										International Festival.
-								</p>
+
 							</small>
 							</p>
 
@@ -228,9 +230,8 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img
-						src="images/project-zizi-show/full.jpg" style="width:100%; "
-						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
+				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/full.jpg"
+						style="width:100%; " alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 
 
