--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -110,6 +110,13 @@
 								The Zizi Show constructs and then deconstructs a virtual cabaret that pushes the limits
 								of what can be imagined on a digital stage.
 							</p>
+							<p>
+								<small>
+									More information at <a id="show" target="_blank" href="https://zizi.ai/about">zizi.ai/about</a>
+									and on <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>
+								</small>
+							</p>
+
 
 							<p class="border-top">
 								<i>The Zizi Project (2019 - ongoing) is a collection of works by Jake Elwes exploring
