zizi pics update

--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -178,8 +178,10 @@
 				<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
 				<br><br>
 
-				<img src="images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
-				<br><small>Zizi: Queering the Dataset 2019, 3-channels</small>
+				<img src="images/project-zizi19/Edinburgh.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<!-- <img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; "
+					alt="CUSP 2019 - Jake Elwes digital artist" /> -->
+				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019</small>
 				<br>
 				<img src="images/project-zizi19/Screen1.jpg" style="width:49%; "
 					alt="CUSP 2019 - Jake Elwes digital artist" />
@@ -187,11 +189,10 @@
 					alt="CUSP 2019 - Jake Elwes digital artist" />
 				<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
 				<br>
-				<img src="images/project-zizi19/Edinburgh.jpg" style="width:60%; "
-					alt="CUSP 2019 - Jake Elwes digital artist" />
-				<img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; "
-					alt="CUSP 2019 - Jake Elwes digital artist" />
-				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019</small>
+
+				<img src="images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>Zizi: Queering the Dataset 2019, 3-channels</small>
+				<br>
 
 
 			</div><!-- // .desktop-9 -->
