--- a/about.html
+++ b/about.html
@@ -158,11 +158,15 @@
 				Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. -->
 
 
-				<p style="margin-top:0px;">Jake is an artist living and working in London. His recent works have looked
+				<p style="margin-top:0px;">
+					
+					Jake Elwes is a media artist living and working in London. He studied at The Slade School of Fine Art - UCL, London (2013-17). Recent works explore his research into machine learning and artificial intelligence. His practice looks for poetry and narrative in the success and failures of these systems, while also investigating and questioning the code and ethics behind them. His current works in the Zizi Project explore AI bias by queering datasets with drag performers. They simultaneously demystify and subvert AI systems.
+
+					<!-- Jake is an artist living and working in London. His recent works have looked
 					at machine learning and artificial intelligence research, exploring the code, philosophy and ethics
 					behind it. In his art Jake engages with both the history and tropes of fine art and the
 					possibilities and consequences of digital technology. He graduated with a BA in Fine Art from the
-					Slade School of Fine Art (UCL), London in 2017.
+					Slade School of Fine Art (UCL), London in 2017. -->
 
 					<!-- Elwes’s work explores the code, philosophy and ethics behind Machine Learning and artificial
 					intelligence research, finding poetry and narrative in the successes and failures of these systems.
@@ -173,8 +177,9 @@
 					Karlsruhe, Germany; TANK Museum, Shanghai; Today Art Museum, Beijing; CyFest, Venice; Edinburgh
 					Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; New
 					Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral
-					Centro, Spain; Nature Morte, Delhi, India, Centre for the Future of Intelligence, UK and he has been
-					featured on BBC4.
+					Centro, Spain; Nature Morte, Delhi, India; RMIT Gallery, Australia; Centre for the Future of Intelligence, UK and he has been
+					featured on ZDF &amp; BBC.
+
 				</p>
 
 
