--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 
 				<p style="margin-top:0px;">
 					
-					Jake Elwes is a media artist living and working in London. He studied at The Slade School of Fine Art - UCL, London (2013-17). Recent works explore his research into machine learning and artificial intelligence. His practice looks for poetry and narrative in the success and failures of these systems, while also investigating and questioning the code and ethics behind them. His current works in the Zizi Project explore AI bias by queering datasets with drag performers. They simultaneously demystify and subvert AI systems.
+					Jake Elwes is a media artist living and working in London. He studied at The Slade School of Fine Art, UCL (2013-17). Recent works explore his research into machine learning and artificial intelligence. His practice looks for poetry and narrative in the success and failures of these systems, while also investigating and questioning the code and ethics behind them. His current works in the Zizi Project explore AI bias by queering datasets with drag performers. They simultaneously demystify and subvert AI systems.
 
 					<!-- Jake is an artist living and working in London. His recent works have looked
 					at machine learning and artificial intelligence research, exploring the code, philosophy and ethics
