--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -93,9 +93,9 @@
 								<!-- What happens when an AI algorithm that has been trained to generate humanly recognisable original images is freed to create images at will? Latent Space is a video snap-shot of a generative adversarial neural network, an AI algorithm trained using 14.2 million photographs, continuously producing new images – a digital subconscious conceiving of new images and visualising a ‘latent space’. -->
 								In artificial intelligence ‘Latent Space’ refers to a mathematical space which maps what a neural network has learnt from training images. Once it has been trained it understands all images of trees as existing in a specific area, and all images of birds in another.<br><br>
 
-								The neural network can be reverse engineered to create fake images from these coordinates<small><sub>1</sub></small>. But what if it was given a new path to travel between these recognisable points, and instead moves through the in-between space?<br><br>
+								The neural network can be reverse engineered to create fake images from these coordinates<small><sub>1</sub></small>. But what if it was given a new path to travel between these recognisable points, instead moving through the in-between space?<br><br>
 
-								Latent Space is a video snap-shot of an A.I. algorithm trained using 14.2 million photographs<small><sub>2</sub></small> continuously producing new images. <br><br>
+								Latent Space is a video snap-shot of an A.I. algorithm in its infancy trained using 14.2 million photographs<small><sub>2</sub></small> continuously producing new images. <br><br>
 
 								<small><small>
 									1) Plug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space (2016)<br>
