--- a/about.html
+++ b/about.html
@@ -231,10 +231,10 @@
 						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, 2013-17<br>
 						<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art &amp;
 						Technology, 2015 <br>
-						<b>Central St Martins (UAL)</b>, Foundation ,2012-13 <br><br>
-						<b>Visiting Lecturer</b>, Slade School of Fine Art (UCL) 2021<br><br>
+						<b>Central St Martins (UAL)</b>, Foundation, 2012-13<br><br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery,
 						London), 2017-19<br><br>
+						<b>Visiting Lecturer</b>, Slade School of Fine Art (UCL), 2021<br><br>
 					</p>
 
 
